--- a/membership.html
+++ b/membership.html
@@ -5,36 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Membership Registration</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-      body {
-        font-family: sans-serif;
-      }
-      .form-container {
-        max-width: 960px;
-        margin: 60px auto;
-        padding: 0 20px;
-      }
-      .form-title {
-        font-size: 1.75rem;
-        font-weight: 600;
-        margin-bottom: 30px;
-      }
-      .form-label {
-        font-weight: 600;
-      }
-      .form-check-label {
-        font-weight: normal;
-      }
-      .submit-btn {
-        margin-top: 10px;
-      }
-      @media (max-width: 768px) {
-        .form-title {
-          font-size: 1.5rem;
-          text-align: center;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="css/membership.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-white px-4 shadow-sm sticky-top">
@@ -111,7 +82,7 @@
             <select class="form-select">
               <option>Select your preferred trainer</option>
               <option>Andrew Tate</option>
-              <option>Sophie Kim</option>
+              <option>Ashton Hall</option>
             </select>
           </div>
           <div class="col-md-6">
@@ -163,7 +134,6 @@
           </div>
         </div>
 
-        <!-- Submit button aligned to right -->
         <div class="text-end mt-4">
           <button type="submit" class="btn btn-dark px-4 submit-btn">Submit</button>
         </div>
